--- a/style.css
+++ b/style.css
@@ -1,164 +1,155 @@
 @font-face {
-    font-family: FloraniaTrial;
-    src: url(FloraniaTrial.otf);
+  font-family: FloraniaTrial;
+  src: url(FloraniaTrial.otf);
 }
 @font-face {
-    font-family: Century;
-    src: url(DOMINIKTH.TTF);
+  font-family: Century;
+  src: url(DOMINIKTH.TTF);
 }
 @font-face {
-    font-family: Sherland;
-    src: url(Sherland.ttf);
+  font-family: Sherland;
+  src: url(Sherland.ttf);
 }
 
+
+  
+html{
+  max-width: 500px ;
+  min-width: 200px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-  }
-  .conteudo {
-    margin-bottom: 48px;
-    border-top: 0.4px solid #FFF2E7;
-  }
-  
-  body {
-    font-size: 100%;
-    background: #B48482;
-  }
-
-.cabeçalho{
-    background-color: white;
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    border-bottom: solid;
-    border-color: #A8A6A2;
-    border-width: 8px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
-
-
-.cabecalho-menu {
-    display: flex;
-    gap: 32px;
-  }
-
-  .cab-menu-item {
-    font-family: Century;
-    color: #B48482;
-    font-weight: 400;
-    font-size: 18px;
-    font-weight: bold;
-  }
-
-  .cab-menu-item:hover{
-    color: rgba(236, 214, 196, 0.53); 
-    transition-duration: 0.5s;
-  }
-
-
-
-.title-section1{
-    margin-top: 100px;
-    font-family: FloraniaTrial;
-   color:#B48482;
-   font-size: 50px;
-   text-align: center;
-}
-
-
-.subtitle-section1{
-font-family: Century;
-  font-size: 24px;
-  color: #B48482;
-  text-align: center;
-}
-
-.conteudo-principal{
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    margin-left: 80px;
-    gap: 25px;
-    margin-top: 15px;
-    margin-bottom: 15px
-
-}
-.submarca{
-    width: 450px;
-    align-self: center;
-    margin-bottom: 50px;
-    margin-top: -5%
-}
-
 
 body{
-    
-    justify-content: center;
-}
-div{
-    width: 600px;
-    height: 700px;
-    display: inline-block;
-    margin-top: 0%;
-}
-.div2{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    margin-top: -600px;
-    margin-bottom: 15px;
-    margin-left: 700px;
+  background-color: #B48482 ;
+  justify-content: center;
+  max-width: 500px ;
+  min-width: 200px;
+  overflow-y: scroll;
+  overflow-x: hidden;
  
+  padding: 0;
 }
-
+.conteudo-principal{
+  background-color: #FFF;
+  max-width: 500px ;
+  min-width: 200px;
+  margin: auto;
+  float: left;
+  padding: 50px;
+}
 .conteudo-principal-escrito {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: -40%;
+}
+.title-section1{
+  margin-top: 100px;
+  font-family: FloraniaTrial;
+ color:#B48482;
+ font-size: 30px;
+ text-align: center;
+}
+.subtitle-section1{
+  font-family: Century;
+    font-size: 18px;
+    color: #B48482;
+    text-align: center;
   }
-
   .btn-section1{
     background-color: #B48482;
-  width: 250px;
-  height: 60px;
-  box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
-  font-family: Century;
-  font-weight: bold;
-  font-size: 24px;
-    color: #FFF;
-   
-    margin-bottom: 25px;
-    align-self: center;
-    margin-top: -10%;
-
-  }
-  .btn:hover{
-    color: rgba(236, 214, 196, 0.53); 
-    transition-duration: 0.5s;
-  }
-
-  .btn{
+    margin-left: 25%;
+    margin-bottom: 25%;
+    width: 50%;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
     font-family: Century;
-    color: #FFF;
-    font-size: 24px;
     font-weight: bold;
-    background-color: #B48482;
-    border: none;
-    margin-left: 20px;
-    margin-top: 12px
-  }
+    font-size: 50%;
+    color: #FFF;
+    max-width: 80%;
+    height: 20px;
+   
+}
 
-  .conteudo-sec{
-    justify-content: center;
-    display: flex;
-    margin-top: -250px;
-    align-items: center;
-  }
+
+
+.btn:hover{
+  color: rgba(236, 214, 196, 0.53); 
+  transition-duration: 0.5s;
+}
+
+.btn{
+  font-family: Century;
+  color: #FFF;
+  font-size: 12px;
+  font-weight: bold;
+  background-color: #B48482;
+  border: none;
+  border-radius: 10px;
+  max-width: 100%;
+  margin-left: 18%;
+  margin-top: 1%;
+  
+}
+
+.cabeçalho{
+  background-color: white;
+  display:flex;
+  flex-direction: row;
+  align-items: left;
+  justify-content: space-around;
+  border-bottom: solid;
+  border-color: #A8A6A2;
+  border-width: 8px;
+  padding: 0.5%;
+  max-width: 400px;
+
+  
+}
+.cabecalho-menu {
+  display: flex;
+  gap: 20px;
+  max-width: 500px ;
+  min-width: 200px;
+}
+
+.cab-menu-item {
+  font-family: Century;
+  color: #B48482;
+  font-weight: 400;
+  font-size: 10px;
+  font-weight: bold;
+  margin: auto;
+}
+.submarca{
+  width: 100%;
+}
+
+.main{
+  padding: 20px;
+  margin:auto;
+  max-width: 500px ;
+  min-width: 200px;
+}
+.conteudo-sec{
+  align-items: center;
+  max-width:400px ;
+  
+}
+
+.imgsec2{
+  min-width: 250px;
+  max-width: 300px;
+  margin-left: 35px;
+}
 
